# CortexAIMemory

./: .env.example  .env.production.example  .gitignore  .gitlab-ci.yml  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  SKILL.md  codecov.yml  config.yaml.example  designplan.md  docker-compose.production.yml  docker-compose.yml
.github/workflows/: ci.yml
crates/cortex-core/: Cargo.toml
crates/cortex-core/src/: episode.rs  graph.rs  lib.rs  models.rs  neurons.rs  notes.rs  parser_types.rs  plan.rs  skills.rs  test_helpers.rs
crates/cortex-graph/: Cargo.toml
crates/cortex-graph/src/: lib.rs  mock.rs  traits.rs
crates/cortex-graph/src/embeddings/: fastembed.rs  mock.rs  traits.rs
crates/cortex-indentiagraph/: Cargo.toml
crates/cortex-indentiagraph/src/: analytics.rs  chat.rs  client.rs  code.rs  commit.rs  constraint.rs  decision.rs  episode.rs  fabric.rs  feature_graph.rs  file.rs  impl_graph_store.rs  lib.rs  milestone.rs  note.rs  plan.rs  project.rs  release.rs  schema.rs  skill.rs  step.rs  symbol.rs  task.rs  user.rs  workspace.rs
crates/cortex-mem/: Cargo.toml
crates/cortex-mem/src/: config.rs  context.rs  lib.rs  llm.rs  main.rs  observation.rs  server.rs  session.rs
crates/cortex-mem/src/hooks/: main.rs  mod.rs  post_tool_use.rs  prompt_submit.rs  session_start.rs  stop.rs
desktop/src-tauri/: splash.html  tauri.conf.json
desktop/src-tauri/src/: docker.rs  main.rs  setup.rs  tray.rs
docs/guides/: authentication.md  chat-websocket.md  getting-started.md
docs/integrations/: claude-code.md  cursor.md  openai.md
docs/setup/: installation.md
init/indentiagraph/: init.cypher
migrations/: 001_user_auth_provider.cypher
packaging/debian/: cortex-mem.service  cortex.service  docker-compose.services.yml  postinst  postrm  prerm
packaging/homebrew/: cortex.rb  project-orchestrator.rb
packaging/rpm/: postinst.sh
scripts/: query.sh  test.sh
src/: cli.rs  lib.rs  main.rs  setup_claude.rs  test_helpers.rs  update.rs
src/api/: auth_handlers.rs  chat_handlers.rs  code_handlers.rs  episode_handlers.rs  handlers.rs  hook_handlers.rs  mem_handlers.rs  mod.rs  note_handlers.rs  profile_handlers.rs  project_handlers.rs  routes.rs  skill_handlers.rs  workspace_handlers.rs  ws_auth.rs  ws_chat_handler.rs  ws_handlers.rs
src/chat/: config.rs  entity_extractor.rs  manager.rs  prompt.rs  skill_hook.rs  types.rs
src/embeddings/: fastembed.rs
src/graph/: algorithms.rs  debouncer.rs  engine.rs  extraction.rs  mod.rs  models.rs  writer.rs
src/indentiagraph/: analytics.rs  batch.rs  chat.rs  client.rs  code.rs  commit.rs  constraint.rs  decision.rs  episode.rs  feature_graph.rs  impl_graph_store.rs  milestone.rs  mock.rs  mod.rs  models.rs  note.rs  plan.rs  profile.rs  project.rs  release.rs  skill.rs  step.rs  task.rs  topology.rs  traits.rs  user.rs  workspace.rs
src/mcp/: handlers.rs  tools.rs
src/neurons/: activation.rs
src/notes/: lifecycle.rs  manager.rs  models.rs
src/orchestrator/: context.rs  planner.rs  runner.rs  topology_hook.rs  watcher.rs
src/parser/: helpers.rs  mod.rs  noise_filter.rs
src/parser/languages/: bash.rs  c.rs  cpp.rs  csharp.rs  go.rs  hcl.rs  java.rs  kotlin.rs  php.rs  python.rs  ruby.rs  rust.rs  scala.rs  swift.rs  typescript.rs  zig.rs
src/plan/: manager.rs  models.rs
src/resolver/: suffix_index.rs  symbol_table.rs
src/skills/: activation.rs  cache.rs  detection.rs  evolution.rs  export.rs  feedback.rs  hook_extractor.rs  import.rs  lifecycle.rs  maintenance.rs  models.rs  naming.rs  package.rs  project_resolver.rs  templates.rs  triggers.rs
tests/: hooks_integration.rs  integration_tests.rs  workspace_tests.rs
