[workspace]
members = [
    ".",
    "crates/cortex-core",
    "crates/cortex-graph",
    "crates/cortex-indentiagraph",
    "crates/cortex-mem",
    "crates/tree-sitter-hcl",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT AND BUSL-1.1"
authors = ["Elun <contact@ffs.holdings>"]

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.11", features = ["v4", "v5", "serde"] }
anyhow = "1.0"
thiserror = "2.0"
async-trait = "0.1"

[package]
name = "project-orchestrator"
version = "0.1.0"
edition = "2021"
description = "AI memory and orchestration layer with IndentiaGraph graph backends and Tree-sitter parsing"
authors = ["Elun <contact@ffs.holdings>"]
license = "MIT AND BUSL-1.1"

[dependencies]
# Async runtime
tokio = { version = "1.49", features = ["full"] }
tokio-util = "0.7"

# Web framework for webhook listener
axum = { version = "0.8", features = ["macros", "ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "fs", "set-header"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Internal graph crates
cortex-core = { path = "crates/cortex-core" }
cortex-graph = { path = "crates/cortex-graph" }
cortex-indentiagraph = { path = "crates/cortex-indentiagraph" }

# Tree-sitter
tree-sitter = "0.24"
tree-sitter-rust = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-python = "0.23"
tree-sitter-go = "0.23"
tree-sitter-java = "0.23"
tree-sitter-c = "0.23"
tree-sitter-cpp = "0.23"
tree-sitter-ruby = "0.23"
tree-sitter-php = "0.23"
tree-sitter-kotlin-ng = "1.1"
tree-sitter-swift = "0.6"
tree-sitter-bash = "0.23"
tree-sitter-c-sharp = "0.23"
tree-sitter-scala = "0.24"
tree-sitter-zig = "1.1"
tree-sitter-hcl = { path = "crates/tree-sitter-hcl" }

# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Graph analytics
petgraph = "0.7"
rustworkx-core = "0.16"

# LRU cache (for resolver)
lru = "0.12"

# Utilities
uuid = { version = "1.11", features = ["v4", "v5", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
walkdir = "2.5"
glob = "0.3"
sha2 = "0.10"
hex = "0.4"
rayon = "1.10"
futures = "0.3"
async-trait = "0.1"

# HTTP client (for CLI) — rustls-only for cross-compilation (no OpenSSL dependency)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Chat / Claude Code SDK
nexus-claude = { git = "https://github.com/this-rs/nexus.git", rev = "ab9610c", default-features = false, features = ["auto-download"] }
tokio-stream = "0.1"

# Auth
jsonwebtoken = "9"
bcrypt = "0.16"

# Self-update (archive extraction)
flate2 = "1"
tar = "0.4"
zip = { version = "2", default-features = false, features = ["deflate"] }

# Home directory detection
dirs = "6"
regex = "1.12.3"

# NATS message broker (inter-process event sync)
async-nats = "0.39"

# Config
dotenvy = "0.15"
urlencoding = "2.1.3"
notify = { version = "8.2.0", features = ["macos_fsevent"] }

# Embedded frontend (optional — compile dist/ into the binary)
rust-embed = { version = "8", optional = true }
mime_guess = { version = "2", optional = true }
rand = "0.10.0"

# Local embeddings via ONNX Runtime (default provider — zero external dependency)
fastembed = "5.11"

# openssl-sys is a transitive dep (via ort-sys build script → ureq → native-tls,
# and neo4rs → native-tls). The "vendored" feature builds OpenSSL from source,
# avoiding cross-compilation conflicts between host and target libssl-dev packages.
# Only activated for cross-compiled builds (e.g. aarch64-unknown-linux-gnu).
openssl-sys = { version = "0.9", optional = true, features = ["vendored"] }

# Unix process signaling (SIGINT to process group for interrupt)
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[features]
default = []
embedded-frontend = ["dep:rust-embed", "dep:mime_guess"]
vendored-openssl = ["dep:openssl-sys"]
nexus-memory = ["nexus-claude/memory"]

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.14"

[[bin]]
name = "cortex"
path = "src/main.rs"

[[bin]]
name = "cortex-cli"
path = "src/cli.rs"

[[bin]]
name = "cortex-mcp"
path = "src/bin/mcp_server.rs"

# =============================================================================
# Debian packaging (cargo-deb)
# =============================================================================
[package.metadata.deb]
maintainer = "Elun <contact@ffs.holdings>"
copyright = "2026, Freedom From Scratch"
license-file = ["LICENSE", "0"]
section = "net"
priority = "optional"
extended-description = """AI memory and orchestration layer with graph-backed code intelligence, \
temporal knowledge notes, episodic memory, and Tree-sitter code parsing. \
Provides a REST API, WebSocket events, and an optional embedded React frontend."""
depends = "$auto"
maintainer-scripts = "packaging/debian/"
assets = [
    ["target/release/cortex", "/usr/bin/cortex", "755"],
    ["target/release/cortex-cli", "/usr/bin/cortex-cli", "755"],
    ["target/release/cortex-mcp", "/usr/bin/cortex-mcp", "755"],
    ["config.yaml.example", "/etc/cortex/config.yaml.example", "644"],
    ["packaging/debian/cortex.service", "/lib/systemd/system/cortex.service", "644"],
    ["packaging/debian/docker-compose.services.yml", "/etc/cortex/docker-compose.services.yml", "644"],
]
conf-files = ["/etc/cortex/config.yaml"]

# NOTE: No [package.metadata.deb.systemd-units] section — we handle systemd
# entirely via the assets entry + custom maintainer-scripts (postinst/prerm/postrm).
# Having both systemd-units AND an assets entry for the .service file causes
# a dpkg conflict: systemd-units installs to /usr/lib/systemd/system/ while
# assets installs to /lib/systemd/system/ (same physical path on merged-/usr).

# Variant for cross-compiled ARM64 builds (dpkg-shlibdeps can't resolve
# ARM64 shared libraries on an x86_64 runner, so we use explicit depends)
[package.metadata.deb.variants.arm64-cross]
depends = "libc6 (>= 2.35), libgcc-s1"

# =============================================================================
# RPM packaging (cargo-generate-rpm)
# =============================================================================
[package.metadata.generate-rpm]
assets = [
    { source = "target/release/cortex", dest = "/usr/bin/cortex", mode = "755" },
    { source = "target/release/cortex-cli", dest = "/usr/bin/cortex-cli", mode = "755" },
    { source = "target/release/cortex-mcp", dest = "/usr/bin/cortex-mcp", mode = "755" },
    { source = "config.yaml.example", dest = "/etc/cortex/config.yaml.example", mode = "644", config = "noreplace" },
    { source = "packaging/debian/cortex.service", dest = "/lib/systemd/system/cortex.service", mode = "644" },
    { source = "packaging/debian/docker-compose.services.yml", dest = "/etc/cortex/docker-compose.services.yml", mode = "644" },
]
post_install_script = "packaging/rpm/postinst.sh"

[package.metadata.generate-rpm.requires]
systemd = "*"
