[package]
name = "cortex-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "CortexAIMemory domain types — models, enums, and errors (backend-agnostic)"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
petgraph = "0.7"
regex = "1.12"

[dev-dependencies]
serde_json = { workspace = true }
