[package]
name = "cortex-graph"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "CortexAIMemory graph abstractions — GraphStore trait, analytics engine, mock backend"

[dependencies]
cortex-core = { path = "../cortex-core" }

# Async
tokio = { version = "1.49", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Graph analytics
petgraph = "0.7"
rustworkx-core = "0.16"

# Utilities
uuid = { version = "1.11", features = ["v4", "v5", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
tracing = "0.1"
sha2 = "0.10"
hex = "0.4"
regex = "1.12"
rand = "0.10"

# Embeddings
fastembed = "5.11"

# HTTP client (for HTTP embedding provider)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# File pattern matching (used by MockGraphStore for FileGlob triggers)
glob = "0.3"

[dev-dependencies]
tokio-test = "0.4"
