[package]
name = "cortex-mem"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-core = { path = "../cortex-core" }
cortex-graph = { path = "../cortex-graph" }
cortex-indentiagraph = { path = "../cortex-indentiagraph" }

tokio = { version = "1.49", features = ["full"] }
axum = { version = "0.8", features = ["macros"] }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
sha2 = "0.10"
hex = "0.4"
dotenvy = "0.15"
dirs = "6"
shellexpand = "3"
clap = { version = "4.5", features = ["derive"] }

[[bin]]
name = "cortex-mem"
path = "src/main.rs"

[[bin]]
name = "cortex-mem-hook"
path = "src/hooks/main.rs"
